--- a/configuration.properties
+++ b/configuration.properties
@@ -38,3 +38,12 @@ password4=Nga^g6!
 #Google
 googleUrl=https://www.google.com
 
+#google
+arac1=volvo
+arac2=bmv
+arac3=audi
+arac4=mercedes
+arac5=ford
+
+#dataTableUrl
+dataTableUrl=https://editor.datatables.net
